--- a/templates/delete_unit.html
+++ b/templates/delete_unit.html
@@ -8,7 +8,7 @@
 <h3 class="pb-3">Borrar unidad</h3>
 <form action="/delete_unit" method="post" class="mb-4">
     <input name="unit_id" type="hidden" value="{{ unit[0]['id'] }}">
-    <p><strong>La eliminación de la unidad es permanente y puede afectar a las recetas de la base de datos. Está seguro que desear eliminar la unidad <span class="text-uppercase fs-5">{{ unit[0]['name'] }}</span>?</strong></p>
+    <p><strong>La eliminación de la unidad es permanente. Está seguro que desear eliminar la unidad <span class="text-uppercase fs-5">{{ unit[0]['name'] }}</span>?</strong></p>
     <button type="submit" class="btn btn-danger"><i class="bi bi-trash"></i> Eliminar</button>
 </form>
 {% endblock %}
