--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -193,7 +193,7 @@ Edit recipe
                 // Log to verify button click
                 console.log("Button clicked!");
 
-                // Create a new <p> element
+                // Create a new <div> element
                 const div = document.createElement("div");
                 div.classList.add("row");
                 div.classList.add("mb-2");
@@ -201,7 +201,6 @@ Edit recipe
                 div.setAttribute('id', "ing_" + i);
                 console.log("div created");
                 div.innerHTML = ing_input(i);
-                console.log("innerhtml added")
 
                 // Append the new <div> to the form
                 document.querySelector("#ingredients").appendChild(div);
